--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Welcome to EDTA Tennis.</title>
+    <title>Welcome to Ernakulam DTA Tennis.</title>
 
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/8.2.6/firebase-app.js"></script>
@@ -45,7 +45,7 @@
 		<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 		  <header class="mb-auto">
 			<div>
-			  <h3 class="float-md-start mb-0">Cover</h3>
+			  <h3 class="float-md-start mb-0">Title</h3>
 			  <nav class="nav nav-masthead justify-content-center float-md-end">
 				<a class="nav-link active" aria-current="page" href="#">Home</a>
 				<a class="nav-link" href="#">Features</a>
@@ -56,7 +56,9 @@
 		
 		  <main class="px-3">
 			<h1>Cover your page.</h1>
-			<p class="lead">Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+			<p class="lead">
+        <a href="about.html">About EDTA</a>
+        Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
 			<p class="lead">
 			  <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
 			</p>
