--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html class="h-100" lang="en">
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -8,7 +8,7 @@
     <!-- update the version number as needed -->
     <script defer src="/__/firebase/8.2.6/firebase-app.js"></script>
     <!-- include only the Firebase features as you need -->
-    <script defer src="/__/firebase/8.2.6/firebase-auth.js"></script>
+    <!-- <script defer src="/__/firebase/8.2.6/firebase-auth.js"></script>
     <script defer src="/__/firebase/8.2.6/firebase-database.js"></script>
     <script defer src="/__/firebase/8.2.6/firebase-firestore.js"></script>
     <script defer src="/__/firebase/8.2.6/firebase-functions.js"></script>
@@ -16,7 +16,7 @@
     <script defer src="/__/firebase/8.2.6/firebase-storage.js"></script>
     <script defer src="/__/firebase/8.2.6/firebase-analytics.js"></script>
     <script defer src="/__/firebase/8.2.6/firebase-remote-config.js"></script>
-    <script defer src="/__/firebase/8.2.6/firebase-performance.js"></script>
+    <script defer src="/__/firebase/8.2.6/firebase-performance.js"></script> -->
     <!-- 
       initialize the SDK after all desired features are loaded, set useEmulator to false
       to avoid connecting the SDK to running emulators.
@@ -24,7 +24,23 @@
     <script defer src="/__/firebase/init.js?useEmulator=true"></script>
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
-    <style media="screen">
+	<style>
+		.bd-placeholder-img {
+		  font-size: 1.125rem;
+		  text-anchor: middle;
+		  -webkit-user-select: none;
+		  -moz-user-select: none;
+		  user-select: none;
+		}
+  
+		@media (min-width: 768px) {
+		  .bd-placeholder-img-lg {
+			font-size: 3.5rem;
+		  }
+		}
+	</style>
+
+    <!-- <style media="screen">
       body { background: #ECEFF1; color: rgba(0,0,0,0.87); font-family: Roboto, Helvetica, Arial, sans-serif; margin: 0; padding: 0; }
       #message { background: white; max-width: 360px; margin: 100px auto 16px; padding: 32px 24px; border-radius: 3px; }
       #message h2 { color: #ffa100; font-weight: bold; font-size: 16px; margin: 0 0 8px; }
@@ -37,7 +53,9 @@
         body, #message { margin-top: 0; background: white; box-shadow: none; }
         body { border-top: 16px solid #ffa100; }
       }
-    </style>
+    </style> -->
+
+	<link href="assets/css/cover.css" rel="stylesheet">
   </head>
   <body>
     <body class="d-flex h-100 text-center text-white bg-dark">
@@ -45,10 +63,10 @@
 		<div class="cover-container d-flex w-100 h-100 p-3 mx-auto flex-column">
 		  <header class="mb-auto">
 			<div>
-			  <h3 class="float-md-start mb-0">Title</h3>
+			  <h3 class="float-md-start mb-0">EDTA</h3>
 			  <nav class="nav nav-masthead justify-content-center float-md-end">
 				<a class="nav-link active" aria-current="page" href="#">Home</a>
-				<a class="nav-link" href="#">Features</a>
+				<a class="nav-link" href="office.html">Office</a>
 				<a class="nav-link" href="#">Contact</a>
 			  </nav>
 			</div>
@@ -57,21 +75,20 @@
 		  <main class="px-3">
 			<h1>Cover your page.</h1>
 			<p class="lead">
-        <a href="about.html">About EDTA</a>
-        Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
+       			Cover is a one-page template for building simple and beautiful home pages. Download, edit the text, and add your own fullscreen background photo to make it your own.</p>
 			<p class="lead">
 			  <a href="#" class="btn btn-lg btn-secondary fw-bold border-white bg-white">Learn more</a>
 			</p>
 		  </main>
-		
+
 		  <footer class="mt-auto text-white-50">
-			<p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p>
+			<!-- <p>Cover template for <a href="https://getbootstrap.com/" class="text-white">Bootstrap</a>, by <a href="https://twitter.com/mdo" class="text-white">@mdo</a>.</p> -->
 		  </footer>
+		
+		  
 		</div>
 		
-		
-			
-	</body>
+
 
     <script>
       document.addEventListener('DOMContentLoaded', function() {
