added the coaches training

--- a/public/events.html
+++ b/public/events.html
@@ -156,6 +156,28 @@
 
 				
 <BR><BR>
+
+<!-- <div id="content" class="no-bottom no-top">
+
+		<h3><b>EDTA Open house, 5th February 2021</b></h3>
+		<P>EDTA Executive Committe visited the Indoor Hard Court affiliated to EDTA at Kolenchery.</P>		   
+
+		<div class="container">
+			<div class="row">
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/event2_1.jpg" width=100% class="img-responsive" alt="">
+					</div>
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/event2_2.jpg" width=100% class="img-responsive" alt="">
+					</div>
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/event2_3.jpg" width=100% class="img-responsive" alt="">
+					</div>
+				</div>  
+		</div> -->
+		
+<BR><BR><BR>
+
 <div id="content" class="no-bottom no-top">
 
 				<h3><b>EDTA Visit at Kolenchery, 5th February 2021</b></h3>
