latest events updated

--- a/public/events.html
+++ b/public/events.html
@@ -156,25 +156,68 @@
 
 				
 <BR><BR>
+	<div id="content" class="no-bottom no-top">
 
-<!-- <div id="content" class="no-bottom no-top">
+		<h3><b>EDTA Coaches Workshop I, 20th February 2021</b></h3>
+		<P>A 2 day coaches workshop for Beginners Training on 6th & 7th March 2021 conducted by <BR>
+			Mr Shankar Krishnaswamy (USPTR Certified Professional and ITF Level II Certified Coach).</P>		   
 
-		<h3><b>EDTA Open house, 5th February 2021</b></h3>
-		<P>EDTA Executive Committe visited the Indoor Hard Court affiliated to EDTA at Kolenchery.</P>		   
+		<div class="container">
+			<div class="row my-5">
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/clinic_9.jpg" width=100% class="img-responsive" alt="">
+					</div>
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/clinic_5.jpg" width=100% class="img-responsive" alt="">
+					</div>
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/clinic_8.jpg" width=100% class="img-responsive" alt="">
+					</div>
+					<div class="col-md-3  wow fadeInUp" data-wow-delay="0s">
+						<img src="images/clinic_4.jpg" width=100% class="img-responsive" alt="">
+					</div>
+			</div>
+			<!-- <div class="row my-5">
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/clinic_4.jpg" width=100% class="img-responsive" alt="">
+					</div>
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/clinic_5.jpg" width=100% class="img-responsive" alt="">
+					</div>
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/clinic_6.jpg" width=100% class="img-responsive" alt="">
+					</div>
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/clinic_8.jpg" width=100% class="img-responsive" alt="">
+					</div>
+			</div>   -->
+		</div>
+		
+<BR><BR><BR>
+
+<div id="content" class="no-bottom no-top">
+
+		<h3><b>EDTA Open house, 20th February 2021</b></h3>
+		<P>EDTA Executive Committe had a conversation with the players and the tennis fraternity.</P>		   
 
 		<div class="container">
 			<div class="row">
 					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
-						<img src="images/event2_1.jpg" width=100% class="img-responsive" alt="">
+						<img src="images/openhouse_1.jpg" width=100% class="img-responsive" alt="">
 					</div>
 					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
-						<img src="images/event2_2.jpg" width=100% class="img-responsive" alt="">
+						<img src="images/openhouse_2.jpg" width=100% class="img-responsive" alt="">
 					</div>
 					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
-						<img src="images/event2_3.jpg" width=100% class="img-responsive" alt="">
+						<img src="images/openhouse_3.jpg" width=100% class="img-responsive" alt="">
+
 					</div>
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/openhouse_4.jpg" width=100% class="img-responsive" alt="">
+					</div>
+					
 				</div>  
-		</div> -->
+		</div>
 		
 <BR><BR><BR>
 
