--- a/public/events.html
+++ b/public/events.html
@@ -159,6 +159,71 @@
 
 	<div id="content" class="no-bottom no-top">
 
+		<h3><b>Ernakulam District Tennis Championship, 15th November 2021</b></h3>
+		<P> </P>		   
+
+		<div class="container">
+			<div class="row my-5">
+					<!-- <div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/1.jpeg" width=100% class="img-responsive" alt="">
+					</div> -->
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/2.jpeg" width=100% class="img-responsive" alt="">
+					</div>
+					<!-- <div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/3.jpeg" width=100% class="img-responsive" alt="">
+					</div> -->
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/4.jpeg" width=100% class="img-responsive" alt="">
+					</div>
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/5.jpeg" width=100% class="img-responsive" alt="">
+					</div>
+					<!-- <div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/6.jpeg" width=100% class="img-responsive" alt="">
+					</div> -->
+					
+					<!-- <div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/8.jpeg" width=100% class="img-responsive" alt="">
+					</div> -->
+				
+					<!-- <div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/10.jpeg" width=100% class="img-responsive" alt="">
+					</div> -->
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/11.jpeg" width=100% class="img-responsive" alt="">
+					</div>
+					<!-- <div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/12.jpeg" width=100% class="img-responsive" alt="">
+					</div> -->
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/13.jpeg" width=100% class="img-responsive" alt="">
+					</div>
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/14.jpeg" width=100% class="img-responsive" alt="">
+					</div>
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/15.jpeg" width=100% class="img-responsive" alt="">
+					</div>
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/16.jpeg" width=100% class="img-responsive" alt="">
+					</div>
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/9.jpeg" width=100% class="img-responsive" alt="">
+					</div>
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/7.jpeg" width=100% class="img-responsive" alt="">
+					</div>
+
+			</div>
+			
+		</div>
+	</div>
+		
+<BR><BR><BR>
+
+	<div id="content" class="no-bottom no-top">
+
 		<h3><b>AITA Championship Series (CS-7) at Coimbatore Boys U-14 Singles Final, 15th October 2021</b></h3>
 		<P>Karan Thapa (EDTA) def Jay Charan  (TN) 7-6 (7-3), 2-6, 6-2 </P>		   
 
