--- a/public/events.html
+++ b/public/events.html
@@ -216,9 +216,7 @@
 					<!-- <div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
 						<img src="images/district21/9.jpeg" width=100% class="img-responsive" alt="">
 					</div> -->
-					<!-- <div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
-						<img src="images/district21/7.jpeg" width=100% class="img-responsive" alt="">
-					</div> -->
+				
 
 			</div>
 			<div class="row my-5">
@@ -231,6 +229,10 @@
 					
 					<img src="images/district21/4.jpeg" width=100% class="img-responsive" alt="">
 					<p>Men's doubles winner Col. Ramkishore & Rahul Thomas Joseph</p>
+				</div>
+				<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+					<img src="images/district21/7.jpeg" width=100% class="img-responsive" alt="">
+					<p>Boys Under 14 doubles  Shrinath Menon &  Shrikanth Menon</p>
 				</div>
 			</div>
 
