--- a/public/events.html
+++ b/public/events.html
@@ -187,7 +187,10 @@
 						<img src="images/district21/6.jpeg" width=100% class="img-responsive" alt="">
 						<p>Girl's 	U18 & Women's Singles Winner Srijana Thapa</p>
 					</div>
-					
+					<div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
+						<img src="images/district21/8.jpeg" width=100% class="img-responsive" alt="">
+						<p>Girl's Under 14 Singles Winner Poorna</p>
+					</div>
 					<!-- <div class="col-md-3 wow fadeInUp" data-wow-delay="0s">
 						<img src="images/district21/8.jpeg" width=100% class="img-responsive" alt="">
 					</div> -->
